[project]
name = "abicmcpserver"
version = "0.1.0"
description = "MCPServer for ABiC"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "mcp>=1.13.0",]
[[project.authors]]
name = "mihokoiijima"
email = "miijima@intersystems.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
abicmcpserver = "abicmcpserver:main"
